# snipsplit

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/snipsplit-core/: Cargo.toml  README.md
crates/snipsplit-core/src/: lib.rs
crates/snipsplit-py/: Cargo.toml
crates/snipsplit-py/src/: lib.rs
python/snipsplit/: __init__.py  _native.pyi
tests/python/: test_snipsplit.py
