[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "snipsplit"
version = "0.1.1"
description = "Token-aware text chunker for RAG ingestion. Sentence-respecting, overlap-friendly."
authors = [{ name = "Mukunda Katta" }]
license = "MIT OR Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["chunker", "rag", "tokenizer", "split", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MukundaKatta/snipsplit"
Repository = "https://github.com/MukundaKatta/snipsplit"
Issues = "https://github.com/MukundaKatta/snipsplit/issues"
Changelog = "https://github.com/MukundaKatta/snipsplit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7.4", "mypy>=1.8", "ruff>=0.4", "maturin>=1.7,<2.0"]

[tool.maturin]
module-name = "snipsplit._native"
python-source = "python"
manifest-path = "crates/snipsplit-py/Cargo.toml"
features = ["pyo3/extension-module"]
strip = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "target", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["python/snipsplit"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests/python"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]
