[package]
name = "snipsplit-core"
description = "Pure-Rust core for snipsplit: token-aware text chunker for RAG ingestion."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
tiktoken-rs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[lib]
path = "src/lib.rs"
