[package]
name = "snipsplit-py"
description = "PyO3 bindings for snipsplit-core."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
publish = false

[lib]
name = "snipsplit_native"
crate-type = ["cdylib"]

[dependencies]
snipsplit-core = { path = "../snipsplit-core", version = "0.1.0" }
pyo3 = { version = "0.29", features = ["abi3-py310", "extension-module"] }
